# tcm

./: .dockerignore  .env.example  .gitignore  Dockerfile  PAGES_TODO.md  PENDING_TODOS.md  README.md  SESSION_SUMMARY.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0ad61655a6f0_initial_migration_with_tag_model.py  193734616fae_add_testcase_and_project_models_with_.py
openspec/: project.md
openspec/changes/add-dark-theme-support/: design.md  proposal.md  tasks.md
openspec/changes/add-dynamic-list-fields/: design.md  proposal.md  tasks.md
openspec/changes/add-enhanced-ui/: design.md  proposal.md  tasks.md
openspec/changes/add-project-view-back-button/: proposal.md  tasks.md
openspec/changes/add-tag-modal-overlays/: design.md  proposal.md  tasks.md
openspec/changes/convert-tag-forms-to-modals/: design.md  proposal.md  tasks.md
openspec/changes/enhance-tag-picker-component/: design.md  proposal.md  tasks.md
openspec/changes/link-testcase-titles-in-project-view/: tasks.md
openspec/changes/widen-testcase-create-form/: proposal.md  tasks.md
openspec/changes/widen-testcase-edit-layout/: tasks.md
openspec/specs/dashboard-pages/: spec.md
openspec/specs/page-layout/: spec.md
scripts/: seed_tags.py
src/tcm/: __init__.py  config.py  database.py  main.py
tests/: conftest.py
tests/integration/: test_auth.py  test_dashboard_pages.py  test_page_layout.py  test_project_pages.py  test_projects_api.py  test_search_pages.py  test_tag_pages.py  test_tags_api.py  test_testcase_pages.py  test_testcases_api.py
(+85 files in other folders)
